<resources>
    <string name="app_name">Diagnose Me</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_have_an_account_already">I have an Account Already</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="user_name">User Name</string>
    <string name="header_image">Header image</string>
    <string name="login_now">Get Started</string>
    <string name="splash_footer">There is a popular saying that health is Wealth. \n Stay healthy Always</string>
    <string name="password_second">Password</string>
    <string name="email_login">email</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome_login">Welcome</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email">Enter Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="title">Title</string>
    <string name="your_alarm">Your Alarm</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="set_your_alarm">Set your alarm</string>
    <string name="choose_time">Choose Time</string>
    <string name="add_title">Add title</string>
    <string name="add_description">Add description</string>
    <string name="add">ADD</string>
</resources>