<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".AlarmActivity">


            <EditText
                android:id="@+id/textAlarmTitle"
                android:layout_width="156dp"
                android:layout_height="26dp"
                android:inputType="text"
                android:hint="@string/title"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <!--    <LinearLayout-->
        <!--        android:id="@+id/linearLayout2"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="50dp"-->
        <!--        android:layout_margin="20dp"-->
        <!--        android:layout_marginTop="20dp"-->
        <!--        android:orientation="horizontal"-->
        <!--        android:padding="20dp"-->
        <!--        android:weightSum="2"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintHorizontal_bias="0.6"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/textView7">-->


            <DigitalClock
                android:id="@+id/digitalClock"
                android:layout_width="74dp"
                android:layout_height="22dp"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:layout_weight="1.5"
                android:textColor="@color/purpleDark"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/image2"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAlarmTitle" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="0.5"
                android:src="@drawable/ic_baseline_access_alarm_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAlarmTitle" />

            <EditText
                android:id="@+id/editDescrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.079"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/digitalClock" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/editDescrip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="184dp">

                <TextView
                    android:text="@string/sun"
                    android:textColor="@color/light_blue"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/mon"
                    android:textStyle="bold"
                    android:textColor="@color/light_blue"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/tue"
                    android:textColor="@color/alarm_red"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/wed"
                    android:textStyle="bold"
                    android:textColor="@color/light_blue"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/thu"
                    android:textColor="@color/light_blue"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/fri"
                    android:textStyle="bold"
                    android:textColor="@color/light_blue"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/sat"
                    android:textColor="@color/light_blue"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <Switch
                android:id="@+id/switchSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@id/editDescrip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image2" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>